# tries

./: .pre-commit-config.yaml  .release-please-config.json  AGENTS.md  CHANGELOG.md  FUTURE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  release-please.yml  test.yml
src/tries/: __init__.py  cli.py  config.py  directories.py  git_ops.py  scoring.py  shell.py  tui.py
tests/: __init__.py  test_cli.py  test_directories.py  test_scoring.py
